--- a/Home.html
+++ b/Home.html
@@ -8,10 +8,10 @@
   <body background="img5.jpg" >
     <header>
       <h1 >Thanks For Logging In</h1>
-      <a class="above" href="Home.html" >Home</a>
+      <a class="above" href="./Home" >Home</a>
       <a class="above" href="" >Anime</a>
       <a class="above" href="" >Watch list</a>
-      <a class="above" href="contact.html" >Contact Us</a>
+      <a class="above" href="./contact" >Contact Us</a>
     </header>
     <main>
         
