--- a/Login.html
+++ b/Login.html
@@ -8,7 +8,7 @@
   <body>
     <div class="login">
       <h2>Login</h2>
-      <form action="Home.html">
+      <form action="./Home">
         <label class="use" for="username">Username</label>
         <input type="text" id="username" name="username" placeholder="Enter your username" required>
 
