--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <a class="above" href="" >Home<span class="tooltiptext">Please Login First</span></a>
       <a class="above" href="" >Anime<span class="tooltiptext">Please Login First</span></a>
       <a class="above" href="" >Watch list<span class="tooltiptext">Please Login First</span></a>
-      <a class="above" href="contact.html" >Contact Us</a>
-      <a class="above" href="Login.html" >Login</a>
+      <a class="above" href="./contact" >Contact Us</a>
+      <a class="above" href="./Login" >Login</a>
     </header>
     <main>
         <br>
